# MGPU

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  kernels.json  main.cc
include/: allocator.h  error.h  unify_pointer.h
include/client/: api.h
include/common/: IPC.h  Log.h  ThreadPool.h  cuda_helper.h  helper.h  message.h
include/server/: commands.h  conductor.h  device.h  kernel.h  memory_pool.h  mod.h  proxy_worker.h  receiver.h  scheduler.h  server.h  task.h
src/: CMakeLists.txt  api.cpp  client.cpp
src/Util/: CMakeLists.txt  Utilization.cpp
src/client/: CMakeLists.txt  IPC.cpp  api.cpp
src/common/: CMakeLists.txt  IPC.cpp  ThreadPool.cpp
src/lib/: Allocator.cc  CMakeLists.txt  UnifyPointer.cc
src/server/: CMakeLists.txt  Conductor.cpp  Device.cpp  KernelMgr.cpp  ProxyWorker.cpp  Receiver.cpp  Scheduler.cpp  main.cc  server.cpp
test/: CMakeLists.txt
test/C++Utility/: CMakeLists.txt  struct_initialize_test.cpp
test/Metrics/: CMakeLists.txt
test/Metrics/gaussian/: gaussian.cu  run_gaussian
test/Metrics/hotspot/: hotspot.cu  run_hotspot
test/Metrics/mgpu_gaussian/: CMakeLists.txt  gaussian.cpp  gaussian.cu  run_mgpu_gaussian
test/Metrics/mgpu_hotspot/: CMakeLists.txt  hotspot.cpp  hotspot.cu  run_mgpu_hotspot
test/Metrics/mgpu_particlefilter/: CMakeLists.txt  ex_particle_CUDA_float_seq.cpp  ex_particle_CUDA_naive_seq.cpp  particle_filter.cu  particle_filter_naive.cu  run_mgpu_particlefilter
test/Metrics/mgpu_pathfinder/: CMakeLists.txt  dynproc_kernel.cu  pathfinder.cpp  run_mgpu_pathfinder
test/Metrics/mgpu_streamcluster/: CMakeLists.txt  kernel_compute_cost.cu  run_mgpu_scgpu  streamcluster_cuda.cpp  streamcluster_cuda_cpu.cpp  streamcluster_header.cu
test/Metrics/particlefilter/: ex_particle_CUDA_float_seq.cu  ex_particle_CUDA_naive_seq.cu  run_particlefilter
test/Metrics/pathfinder/: pathfinder.cu  run_pathfinder
test/Metrics/streamcluster/: run_scgpu  streamcluster_cuda.cu  streamcluster_cuda_cpu.cpp
test/Utilities/: CMakeLists.txt  DifferentKernels.cu  baseUtility.cu  concurrentKernel.cu  deviceQuery.cu  simpleStream.cu  socket.cpp  test_sm_id.cu
test/client/: CMakeLists.txt  test_client.cpp
test/kernels/: CMakeLists.txt  matrixMul.cu  specify_sm.cu  vecAdd.cu  vectorAdd.cu
test/vectorAdd/: CMakeLists.txt  vectorAdd.cu  vectorAddMappedMemory.cu
